# services-statics

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: statics_commands.py
nagare/services/: statics.py
src/nagare/admin/: statics_commands.py
src/nagare/services/: statics.py
tests/: test_path_info.py
