[metadata]
name = nagare-services-statics
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Static assets publication
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-statics
    Tracker = https://github.com/nagareproject/services-statics/issues

[options]
zip_safe = False
packages = find:
install_requires =
    WebOb
    nagare-services
    nagare-server

[options.entry_points]
nagare.commands =
    mountpoints = nagare.admin.statics_commands:Mountpoints

nagare.services =
    statics = nagare.services.statics:Statics

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
